# granite-geospatial-land-surface-temperature

./: .gitattributes  .gitignore  README.md  model-card.md  pyproject.toml
assets/databases/: global_cities_database.csv  global_cities_oceanmask.dbf  global_cities_oceanmask.shp  global_cities_oceanmask.shx
configs/: config.yaml  config_full_tile.yaml
granite_surface_urban_heat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 2_download_data.ipynb  2_introduction_to_LST_Tweening.ipynb  3_preprocess_data.ipynb  3_tweening_data_preparation.ipynb  4_introduction_to_LST_Tweening.ipynb  5_preprocess_data.ipynb  5_tweening_data_preparation.ipynb
notebooks/.ipynb_checkpoints/: 1_getting_started-checkpoint.ipynb
notebooks/experiments/fine_tune_suhi/version_0/: config.yaml  config_deploy.yaml
notebooks/experiments/fine_tune_suhi/version_1/: config_full_tile.yaml
notebooks/experiments/fine_tune_suhi/version_2/: config.yaml  config_deploy.yaml  hparams.yaml
notebooks/experiments/fine_tune_suhi/version_3/: config.yaml  config_deploy.yaml  hparams.yaml
utils/: config_download.json  config_download_example.json  config_preprocess.json  download_functions.py  main_download.py  plotting.py  preprocessing.py  tweening.py
utils/.ipynb_checkpoints/: plotting-checkpoint.py
