[project]
name = "granite-geospatial-land-surface-temperature"
version = "0.99.0"
description = "Granite Geospatial Land Surface Temperature Models"
license = { "text" = "Apache License, Version 2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["land surface temperature", "LST", "fine-tuning", "geospatial foundation models", "surface urban heat", "urban heat islands", "earth observation foundation models", "uhi", "suhi"]
authors = [
  { name = "Muaaz Bhamjee", email = "muaaz.bhamjee@ibm.com"},
  { name = "Tamara Rosemary Govindasamy", email = "tamara.govindasamy@ibm.com" }
]

dependencies = [
  "torch==2.1.0",
  "torchvision==0.16.0",
  "terratorch==1.0",
  "lightning-utilities==0.11.3.post",
  "albumentations==1.4.3",
  "huggingface_hub",
  "jupyter",
  "matplotlib",
  "folium",
  "pandas",
  "cdsapi",
  "fiona",
  "netCDF4",
  "pandas",
  "pyproj",
  "pystac",
  "pystac_client",
  "rasterio",
  "rioxarray",
  "shapely",
  "scikit-learn",
  "xarray",
  "Ipython",
  "Path",
  "holoviews",
  "torchgeo==0.6.0",
  "albucore<=0.0.16",
  "torchmetrics==1.3.1",
  "geopandas>=0.14.2",
  "lightly>=1.4.25",
  "h5py>=3.10.0",
  "mlflow==2.14.3",
# broken due to https://github.com/Lightning-AI/pytorch-lightning/issues/19977
  "lightning[pytorch-extra]>=2,!=2.3.*",
]

[tool.setuptools]
packages = ["utils", "notebooks"]

[project.urls]
#Update this
Documentation = "https://github.com/ibm-granite/granite-geospatial-land-surface-temperature#readme"
Issues = "https://github.com/ibm-granite/granite-geospatial-land-surface-temperature/issues"
Source = "https://github.com/ibm-granite/granite-geospatial-land-surface-temperature"
# Huggingface Hub = ""

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["tsfm_public"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
